# RINS-task-2

./: CMakeLists.txt  README.md  package.xml
config/: nav2.yaml
include/: dis.hpp
launch/: dis_sim.launch.py  ignition.launch.py  localization.launch.py  nav2.launch.py  sim_turtlebot_nav.launch.py  sim_turtlebot_slam.launch.py  slam.launch.py  turtlebot4_spawn.launch.py  turtlebot4_spawn_nav.launch.py
maps/: map.pgm  map.yaml
scripts/: detect_people.py  detect_rings.py  image_gatherer.py  robot_commander.py  transform_point.py
src/: boilerplate.cpp  cylinder_segmentation.cpp  forwarder.cpp  planes.cpp
voice/: Zivjo2.m4a  Zivjo3.m4a  zivjo.m4a
worlds/: task.sdf
worlds/task_meshes/: map.dae
